# haskell-flake

./: flake.nix
template/: CHANGELOG.md  LICENSE  dummy-package.cabal  dummy-package.nix  flake.nix
