cabal-version:      2.4
name:               dummy-package
version:            0.1.0.0
synopsis:           A dummy package
homepage:           https://example.com
license:            MIT
license-file:       LICENSE
author:             John Doe
maintainer:         john-doe@example.com
extra-source-files: CHANGELOG.md
executable dummy-package
    main-is:          Main.hs
    build-depends:    base ^>=4.14.0.0
    default-language: Haskell2010
